--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,11 @@
+%%%%
+% ATS Friendly Technical Resume
+%%%%
+% Author: Burhan KW
+% License: CC-BY-4
+% https://creativecommons.org/licenses/by/4.0/legalcode.txt
+%%%%
+
 \documentclass[letterpaper,10pt]{article}
 
 \usepackage{latexsym}
@@ -57,8 +65,8 @@
 \begin{center}
   \textbf{\Huge Alex Webb} \\
   \small 555-123-4567 $|$ \href{mailto:alex@email.com}{alex@email.com} $|$ 
-  \href{https://linkedin.com/in/burhan-webb}{linkedin.com/in/alexwebbx} $|$
-  \href{https://github.com/zwayth}{github.com/alexwebbx}
+  \href{https://linkedin.com/}{linkedin.com/in/firstlast} $|$
+  \href{https://github.com/}{github.com/firstlast}
 \end{center}
 
 \section*{Summary}
